POLISH TIME.  1.0 is almost here!  The only remaining TODO is "update/finish documentation"!!! gateone.js and themes:  Made a few minor changes to GateOne.Visual.dialog() to ensure that multiple dialogs on the same page can be moved independently of each other. SSH Plugin:  Fixed a bug in store_id_file where the permissions on the private key weren't getting set properly (just needed a quick os.chmod to 0600). gateone.js:  Dialogs now work like they would in a regular window manager...  When you click on one it will be brought to the front.  I also made it so that non-foreground dialogs will have their opacity decreased slightly to make them less prominent. gateone.js:  Dialogs now get their opacity set to 0.75 when being moved (so you can see what's behind them--a convenient way to check something real quick without having to close the dialog). Logging Plugin:  Made some improvements to make sure the selected row is highlighted in the log viewer.  I also made this same (minor) tweak to the SSH Plugin's identity viewer. Bookmarks Plugin:  All the internal dialogs and forms have been updated to use the new GateOne.Visual.dialog() method. Bookmarks Plugin:  GateOne.Bookmarks.importForm() has been renamed to openImportDialog(). Bookmarks Plugin:  GateOne.Bookmarks.bookmarkForm() has been renamed to openNewBookmarkForm(). Bookmarks Plugin:  When trying to submit a new bookmark with a URL that has already been bookmarked, an error will now be displayed and the bookmark will not be saved.  This fixes the bug where it was possible to have duplicate bookmarks. CSS Themes:  Fixed the buttons so that they no longer get that odd white border when being depressed.  This also corrected a problem where they would grow by 2 pixels in size when depressed as well (which would screw up some of the yes/no dialogs). CSS Themes:  Some tweaks to input/textarea elements inside of dialogs.

--- a/gateone/plugins/bookmarks/templates/bookmarks.css
+++ b/gateone/plugins/bookmarks/templates/bookmarks.css
@@ -622,24 +622,6 @@
 #{{container}} .search {
     color: maroon;
 }
-#{{prefix}}bm_dialog_form {
-    text-align: center;
-}
-#{{prefix}}bm_dialog_form input {
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0.2em;
-    display: block;
-    padding: 0.2em 0.2em;
-    border: 1px solid #bbb;
-    border-radius: 2px;
-    box-shadow: 0 1px 1px #fff;
-    color: #000;
-    position: relative;
-    z-index: 2;
-    font-size: 1em;
-}
 #{{container}} .sharebutton {
 /*     width: 75%; */
     height: 1.5em;
@@ -717,6 +699,13 @@
 }
 #{{prefix}}bookmarks_upload {
     height: 2.5em;
+}
+#{{prefix}}bm_new_form input {
+    width: 25em;
+}
+#{{prefix}}bm_new_form textarea {
+    width: 25em;
+    height: 8em;
 }
 /* Effects */
 #{{container}} div[name="{{prefix}}bookmark"]:hover {
